# Quasar

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  USAGE.md
.github/workflows/: ci.yml
crates/callsoro-check/: Cargo.toml
crates/callsoro-check/src/: lib.rs  resolve.rs  typecheck.rs  validate.rs
crates/callsoro-cli/: Cargo.toml
crates/callsoro-cli/src/: main.rs
crates/callsoro-compile/: Cargo.toml
crates/callsoro-compile/src/: compile.rs  ir.rs  lib.rs  xdr.rs
crates/callsoro-compile/src/snapshots/: callsoro_compile__compile__tests__roundtrip_all_types.snap  callsoro_compile__compile__tests__roundtrip_minimal.snap  callsoro_compile__compile__tests__roundtrip_multi_call.snap  callsoro_compile__compile__tests__roundtrip_transfer.snap
crates/callsoro-exec/: Cargo.toml
crates/callsoro-exec/src/: error.rs  execution_error.rs  executor.rs  lib.rs  rpc.rs  sign.rs  simulator.rs  transaction.rs  types.rs
crates/callsoro-syntax/: Cargo.toml
crates/callsoro-syntax/src/: ast.rs  lexer.rs  parser.rs
crates/callsoro-syntax/src/snapshots/: callsoro_syntax__lexer__tests__snapshot_all_types_fixture.snap  callsoro_syntax__lexer__tests__snapshot_minimal_fixture.snap  callsoro_syntax__lexer__tests__snapshot_multi_call_fixture.snap  callsoro_syntax__lexer__tests__snapshot_transfer_fixture.snap  callsoro_syntax__parser__tests__snapshot_all_types_fixture.snap  callsoro_syntax__parser__tests__snapshot_minimal_fixture.snap  callsoro_syntax__parser__tests__snapshot_multi_call_fixture.snap  callsoro_syntax__parser__tests__snapshot_transfer_fixture.snap
crates/quasar-check/: Cargo.toml
crates/quasar-check/src/: resolve.rs  strkey.rs  typecheck.rs  validate.rs
crates/quasar-cli/: Cargo.toml
crates/quasar-cli/src/: main.rs
crates/quasar-compile/: Cargo.toml
crates/quasar-compile/src/: compile.rs  xdr.rs
crates/quasar-compile/src/snapshots/: quasar_compile__compile__tests__roundtrip_all_types.snap  quasar_compile__compile__tests__roundtrip_minimal.snap  quasar_compile__compile__tests__roundtrip_multi_call.snap  quasar_compile__compile__tests__roundtrip_transfer.snap
crates/quasar-exec/: Cargo.toml
crates/quasar-exec/src/: abi.rs  executor.rs  lib.rs  simulator.rs  transaction.rs  types.rs
crates/quasar-syntax/: Cargo.toml
crates/quasar-syntax/src/: parser.rs  span.rs
crates/quasar-syntax/src/snapshots/: quasar_syntax__lexer__tests__snapshot_all_types_fixture.snap  quasar_syntax__lexer__tests__snapshot_minimal_fixture.snap  quasar_syntax__lexer__tests__snapshot_multi_call_fixture.snap  quasar_syntax__lexer__tests__snapshot_transfer_fixture.snap  quasar_syntax__parser__tests__snapshot_all_types_fixture.snap  quasar_syntax__parser__tests__snapshot_minimal_fixture.snap  quasar_syntax__parser__tests__snapshot_multi_call_fixture.snap  quasar_syntax__parser__tests__snapshot_transfer_fixture.snap
tests/fixtures/: all_types.soro  interface_call.soro  minimal.soro  multi_call.soro  token.soroabi  transfer.expected.json  transfer.soro  with_consts.soro
