[workspace]
resolver = "2"
members = [
    "crates/callsoro-syntax",
    "crates/callsoro-check",
    "crates/callsoro-compile",
    "crates/callsoro-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/salazarsebas/callsoro"

[workspace.dependencies]
# Internal crates
callsoro-syntax = { path = "crates/callsoro-syntax" }
callsoro-check = { path = "crates/callsoro-check" }
callsoro-compile = { path = "crates/callsoro-compile" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Testing
insta = { version = "1", features = ["yaml"] }
