[workspace]
resolver = "2"
members = [
    "crates/callsoro-syntax",
    "crates/callsoro-check",
    "crates/callsoro-compile",
    "crates/callsoro-exec",
    "crates/callsoro-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/salazarsebas/callsoro"

[workspace.dependencies]
# Internal crates
callsoro-syntax = { path = "crates/callsoro-syntax" }
callsoro-check = { path = "crates/callsoro-check" }
callsoro-compile = { path = "crates/callsoro-compile" }
callsoro-exec = { path = "crates/callsoro-exec" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Stellar
stellar-xdr = { version = "25.0", default-features = false, features = ["std", "curr", "base64"] }
stellar-strkey = "0.0.16"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json"] }

# WASM
wasmparser = "0.221"

# Testing
insta = { version = "1", features = ["yaml"] }
