[workspace]
resolver = "2"
members = [
    "crates/quasar-syntax",
    "crates/quasar-check",
    "crates/quasar-compile",
    "crates/quasar-exec",
    "crates/quasar-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/salazarsebas/quasar"

[workspace.dependencies]
# Internal crates
quasar-syntax = { path = "crates/quasar-syntax" }
quasar-check = { path = "crates/quasar-check" }
quasar-compile = { path = "crates/quasar-compile" }
quasar-exec = { path = "crates/quasar-exec" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Stellar
stellar-xdr = { version = "25.0", default-features = false, features = ["std", "curr", "base64"] }
stellar-strkey = "0.0.16"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json"] }

# Crypto
ed25519-dalek = { version = "2", features = ["std"] }
sha2 = "0.10"

# WASM
wasmparser = "0.221"

# Testing
insta = { version = "1", features = ["yaml"] }
