[package]
name = "callsoro-check"
description = "Semantic validation and type checking for CallSoro"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
callsoro-syntax = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
callsoro-compile = { workspace = true }
serde_json = { workspace = true }
