[package]
name = "callsoro-cli"
description = "CLI binary for the CallSoro DSL compiler"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "callsoro"
path = "src/main.rs"

[dependencies]
callsoro-syntax = { workspace = true }
callsoro-check = { workspace = true }
callsoro-compile = { workspace = true }
callsoro-exec = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
stellar-xdr = { workspace = true }
