[package]
name = "callsoro-compile"
description = "AST to JSON IR compiler for CallSoro"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
callsoro-syntax = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
