[package]
name = "callsoro-exec"
description = "Soroban RPC simulation for CallSoro"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
callsoro-compile = { workspace = true }
stellar-xdr = { workspace = true }
stellar-strkey = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
wasmparser = { workspace = true }
