[package]
name = "quasar-check"
description = "Semantic validation and type checking for Quasar"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
quasar-syntax = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
quasar-compile = { workspace = true }
serde_json = { workspace = true }
