[package]
name = "quasar-compile"
description = "AST to JSON IR compiler for Quasar"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
quasar-syntax = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
stellar-xdr = { workspace = true }
stellar-strkey = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
