[package]
name = "quasar-exec"
description = "Soroban RPC simulation for Quasar"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
quasar-compile = { workspace = true }
stellar-xdr = { workspace = true }
stellar-strkey = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
wasmparser = { workspace = true }
